added a getter in scheduler subsystem for testing, added fixed test in test class to check if an elevator is in use